samples/_failures_safe/1761291131_931037_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8681d945.c: In function ‘main’:
./samples/SAFE/__tmp_8681d945.c:148:12: error: missing terminating " character
  148 |     printf("\nSecond matrix:\n
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8681d945.c:148:5: error: expected expression at end of input
  148 |     printf("\nSecond matrix:\n
      |     ^~~~~~
./samples/SAFE/__tmp_8681d945.c:148:5: error: expected declaration or statement at end of input
